--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"nedb": "^1.8.0",
 		"nodemon": "^2.0.20",
 		"path": "^0.12.7",
+		"serverless-http": "^3.1.0",
 		"tailwindcss": "^3.1.8"
 	}
 }
